<resources>
    <string name="app_name">Roost Remote</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_edit">Edit</string>
    <string name="save">Save</string>
    <string name="name_hint">Name</string>
    <string name="describer_hint">Describer Server Address</string>
    <string name="state_hint">State</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me!</string>
    <string name="error_invalid_username">Invalid username!</string>
    <string name="error_invalid_password">Invalid password!</string>
</resources>
